mdapipkg/unpackaged/objects/Application_Log__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of this record is from TODAY() - Created Date</description>
        <formula>TODAY() -   DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <formula>DATETIMEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debug_Level__c</fullName>
        <description>Error, Info, Warn, Debug</description>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Payload__c</fullName>
        <description>If log is integration related show xml payload</description>
        <label>Integration Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Code__c</fullName>
        <description>Either the exception error code of custom org code for record</description>
        <label>Log Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GENERAL_ERROR_INTEGRATION</fullName>
                </value>
                <value>
                    <fullName>MISSING_MASTER_MAP_VALUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message to log</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The related record id</description>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Information__c</fullName>
        <description>The related record info (e.g. Apex Batch Job Id, Contact etc)</description>
        <label>Reference Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Function__c</fullName>
        <description>The originating function in the class (e.g. UpdateDivision() )</description>
        <externalId>true</externalId>
        <label>Source Function</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>The originating class (e.g. CustomerManagement)</description>
        <label>Source</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Raw exception stack trace for unhandled errors</description>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timer__c</fullName>
        <description>The time in milliseconds for the transaction (e.g. For integration/batch apex messages it might be the time taken to process)</description>
        <label>Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <columns>Timer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSE_SOAPCABINLOG_WS</fullName>
        <columns>NAME</columns>
        <columns>Debug_Level__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CSE_SOAPCABINLOG_WS</value>
        </filters>
        <label>CSE_SOAPCABINLOG_WS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Crew_Error</fullName>
        <columns>NAME</columns>
        <columns>Reference_Id__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Timer__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source_Function__c</field>
            <operation>equals</operation>
            <value>updateCrew</value>
        </filters>
        <filters>
            <field>Debug_Level__c</field>
            <operation>equals</operation>
            <value>Error,Warning</value>
        </filters>
        <label>Crew Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Integration User</value>
        </filters>
        <label>Integration</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Integration_without_getSSR</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Integration User</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
            <value>JobQueueToScheduleLog</value>
        </filters>
        <filters>
            <field>Source_Function__c</field>
            <operation>notEqual</operation>
            <value>getSSR</value>
        </filters>
        <label>Integration Without getSSR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NEW_PAX_LIST_specific_date</fullName>
        <columns>NAME</columns>
        <columns>Source_Function__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>NewPaxList_Queueable</value>
        </filters>
        <label>NEW_PAX_LIST specific date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PreFlight_Sync_specific_date</fullName>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Timer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/26/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>4/27/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>PreFlight_Sync</value>
        </filters>
        <filters>
            <field>Reference_Id__c</field>
            <operation>contains</operation>
            <value>TG0926_26Apr17</value>
        </filters>
        <label>PreFlight_Sync specific date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ROP_Callout_Batch</fullName>
        <columns>NAME</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <columns>Integration_Payload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CSE_ROPCalloutBatch</value>
        </filters>
        <label>ROP Callout Batch</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ROP_Enrollment</fullName>
        <columns>NAME</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <columns>Integration_Payload__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>MB_RESTROPEnrollment</value>
        </filters>
        <label>ROP Enrollment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submit_Crew_Appraisal</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Reference_Id__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Timer__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CSE_SOAP_SUBMITCREWAPPRAISAL_WS</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>MD_CrewAppraisal_RestResource</value>
        </filters>
        <label>Submit Crew Appraisal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Submit_Crew_Appraisal_Error</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Reference_Id__c</columns>
        <columns>Debug_Level__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Timer__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>CSE_SOAP_SUBMITCREWAPPRAISAL_WS</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>MD_CrewAppraisal_RestResource</value>
        </filters>
        <filters>
            <field>Debug_Level__c</field>
            <operation>equals</operation>
            <value>Error,Warning</value>
        </filters>
        <label>Submit Crew Appraisal Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Debug_Level__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <columns>Timer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY_Flight</fullName>
        <columns>NAME</columns>
        <columns>Reference_Id__c</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Reference_Id__c</field>
            <operation>contains</operation>
            <value>TG0930_01MAY17_1_80</value>
        </filters>
        <label>TODAY_Flight</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY_Incident</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>Integration_Payload__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CreateDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Source_Function__c</field>
            <operation>equals</operation>
            <value>createIncident</value>
        </filters>
        <label>TODAY_Incident</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY_Integration</fullName>
        <columns>NAME</columns>
        <columns>Source__c</columns>
        <columns>Source_Function__c</columns>
        <columns>Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Integration User</value>
        </filters>
        <label>TODAY_Integration</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>